--- a/README
+++ b/README
@@ -8,3 +8,5 @@ These templates require the seekingmichigan.org-ContentDM project be installed o
 You can find that at http://github.com/dkastner/seekingmichigan.org-ContentDM
 
 Editing a file on github should update the server.
+
+(This is a minor edit for purposes of demonstrating Git.)
